[package]
name = "block_chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde   = { version = "1.0.123", features = ["derive"] }
bincode = { version = "1.3.1" }
rust-crypto = { version = "0.2.36" }
chrono   = { version = "0.4.24" }
bigint   = { version = "4.4.3" }